# qylock-windows

./: .gitignore  NOTICE  README.md  package-lock.json  package.json  release-notes-ko.txt  replace.py  tsconfig.installer.json  vite.installer.config.ts
dist-installer/: index.html
dist-installer/assets/: index-B-3PBF_l.css  index-CLBKIbUX.js
src/: App.css  App.tsx  app-settings.ts
src-installer/: InstallerApp.tsx  index.html  installer.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-installer/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-installer/capabilities/: default.json
src-tauri-installer/permissions/: installer.json
src-tauri-installer/src/: lib.rs  main.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main.json
src-tauri/src/: lib.rs  main.rs
src/components/: SettingsDropdown.tsx
src/screens/: LockScreen.tsx  SettingsScreen.tsx
