[package]
name = "qylock-windows"
version = "0.1.3"
description = "Windows tray lock screen app built with Tauri and React."
authors = ["minseok"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/minseokk7/qylock-windows"
homepage = "https://github.com/minseokk7/qylock-windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qylock_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
raw-window-handle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
windows-future = "0.3.2"
windows = { version = "0.62.2", features = ["Foundation", "Media_Control", "Storage_Streams", "Win32_Security_Credentials", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_WinRT", "Win32_System_RemoteDesktop", "Win32_Graphics_Gdi", "Security_Credentials_UI"] }
winreg = "0.55"
